[gd_scene load_steps=4 format=3 uid="uid://xoqqkwegsyoo"]

[ext_resource type="Script" path="res://levels/SceneManager.gd" id="1_dnu1y"]
[ext_resource type="PackedScene" uid="uid://bhmfvrcbx4eei" path="res://levels/main_room_scene.tscn" id="2_n40qn"]
[ext_resource type="PackedScene" uid="uid://dqs6vdvxa4y4w" path="res://ui/TransitionScreen.tscn" id="3_07cap"]

[node name="SceneManager" type="Node2D"]
script = ExtResource("1_dnu1y")

[node name="CurrentScene" type="Node2D" parent="."]

[node name="main_room_scene" parent="CurrentScene" instance=ExtResource("2_n40qn")]
scale = Vector2(0.988479, 1)

[node name="TransitionScreen" parent="." instance=ExtResource("3_07cap")]

[node name="ColorRect" parent="TransitionScreen" index="0"]
anchors_preset = 15

[connection signal="transitioned" from="TransitionScreen" to="." method="_on_transition_screen_transitioned"]

[editable path="TransitionScreen"]
